tests/error/errors_on_usage/else_expr_type_change.err
Guppy compilation failed. Error in file $FILE:8

6:    y = 3
7:    (y := y + 1) if x else (y := True)
8:    return y
             ^
GuppyTypeError: Expected return value of type `int`, got `bool`
